# rbit

./: Cargo.toml  README.md  architecture-overview.excalidraw
src/: error.rs  fetcher.rs  file.rs  lib.rs  peer.rs  peers_pool.rs  torrent.rs  tracker.rs
src/peer/: client.rs  events.rs  pool.rs
