[package]
name = "rbit"
author = "Francisco Braço-Forte <f.s.f.b2001@gmail.com>"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_bencode = "0.2.4"
serde_bytes = "0.11"
anyhow = "1.0.79"
thiserror = "1.0"
url = "2.5"
reqwest = "0.11"

[dependencies.serde]
version = "1"
features = ["serde_derive"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt", "rt-multi-thread", "net"]

[dependencies.rand]
version = "0.8.5"
features = ["std", "std_rng"]

[dev-dependencies]
claims = "0.7.1"
