[package]
name = "rbit"
authors = ["Francisco Braço-Forte <f.s.f.b2001@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
bendy = "0.3.3"
anyhow = "1.0.79"
thiserror = "1.0"
url = "2.5"
reqwest = "0.11"
sha1 = "0.10.6"
tokio-stream = "0.1"
async-trait = "0.1.79"

[dependencies.tokio]
version = "1"
features = ["macros", "rt", "rt-multi-thread", "net", "sync", "io-util"]

[dependencies.rand]
version = "0.8.5"
features = ["std", "std_rng"]

[dev-dependencies]
claims = "0.7.1"
wiremock = "0.6.0"
futures = "0.3"
